refactor to use google maps
